--- a/Pages/staff.html
+++ b/Pages/staff.html
@@ -39,8 +39,8 @@
             omnis, in asperiores consequuntur.</p>
         <div class="cuerpo__foto1" style="background-image: url(../Assets/Foto6.jpg);"> </div>
     </main>
-    <h1 style="font-size: 25px; font-weight: bold; background-color: rgba(0, 0, 0, 0.233);
-                text-align: center; padding: 20px; text-shadow: 0 0 20px black;">
+    <h1 class="cuerpo__titulo" style="background-color: rgba(0, 0, 0, 0.233);
+                padding: 20px;">
                 Profesionales a su servicio
     </h1>
 
