--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -1,37 +1,66 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../CSS/estilos.css">
+    <link rel="stylesheet" href="../SCSS/estilos.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
     <title>Contacto</title>
 </head>
+
 <body>
     <header class="encabezado">
-        <div class="encabezado__imagen"><a href="../index.html"><img class="encabezado__logo" src="../Assets/logo.png" alt="" ></a></div>
-        <span class="encabezado__texto_logo">
+        <div class="encabezado__imagen animate__shakeX">
+            <a href="../index.html"><img class="encabezado__logo" src="../Assets/logo.png" alt=""></a>
+        </div>
+        <span class="encabezado__texto_logo animate__backInDown">
             <div>Espacio Lupsa</div>
             <div>Consultorios Multidisciplinarios</div>
         </span>
-        <nav class="encabezado__navegacion">
-            <ul>
-                <li><a href="../index.html">Home |</a></li>
-                <li><a href="./turnos.html">Turnos |</a></li>
-                <li><a href="./institucional.html">Institucional |</a></li>
-                <li><a href="./staff.html">Staff |</a></li>
-                <li><a href="./info.html">Info |</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
+
+        <!--********** inicio navbar bootstrap **********-->
+
+        <nav class="navbar navbar-expand-md navbar-dark">
+            <button class="navbar-toggler mx-auto" type="button" data-bs-toggle="collapse" data-bs-target="#opciones">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <nav id="opciones" class="encabezado__navegacion collapse navbar-collapse">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./turnos.html">Turnos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./institucional.html">Institucional</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./staff.html">Staff</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./info.html">Info</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                </ul>
+            </nav>
         </nav>
+
+        <!--********** fin navbar bootstrap **********-->
+
     </header>
-    <main class="cuerpo">
-        <h1 class="cuerpo__titulo">Contacto</h1>
-        <p class="cuerpo__texto1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores perspiciatis culpa, alias porro esse perferendis. Alias beatae blanditiis minima sed eaque similique, eos fugit illum quis omnis, in asperiores consequuntur.</p>
-        <div class="cuerpo__mapa"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13332.271943948563!2d-60.22584583597008!3d-33.34317360936359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b75d7f65584f59%3A0x67647c43f618cb7c!2sSan%20Jos%C3%A9%20348%2C%20San%20Nicol%C3%A1s%20de%20Los%20Arroyos%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1711204630498!5m2!1ses-419!2sar" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+
+    <main>
+        <h1 class="titulo animate__fadeInLeft">Contacto</h1>
+        <div class="cuerpo">
+            <p class="cuerpo__texto1 animate__fadeInLeft">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Dolores perspiciatis culpa, alias porro esse perferendis. Alias beatae blanditiis minima sed eaque
+                similique, eos fugit illum quis omnis, in asperiores consequuntur.</p>
+            <div class="cuerpo__foto1 animate__fadeInRight"><iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13332.271943948563!2d-60.22584583597008!3d-33.34317360936359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b75d7f65584f59%3A0x67647c43f618cb7c!2sSan%20Jos%C3%A9%20348%2C%20San%20Nicol%C3%A1s%20de%20Los%20Arroyos%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1711204630498!5m2!1ses-419!2sar"
+                    width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+        </div>
     </main>
     <div>
         <ul class="lista">
@@ -39,21 +68,51 @@
             <li><a href="">Lupsa@gmail.com</a></li>
             <li><a href=""><i class="fa-brands fa-whatsapp"></i></a>336 4111111</li>
             <li>Seguinos en nuestras redes
-                <a href="""><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="""><i class=" fa-brands fa-x-twitter"></i></a>
                 <a href=""><i class="fa-brands fa-facebook"></i></a>
                 <a href=""><i class="fa-brands fa-instagram"></i></a>
             </li>
         </ul>
-    </section>
-    <footer class="pie">
-        <span class="pie__texto">Espacio Lupsa 2024 todos los derechos reservados</span>
-        <span class="pie__redes">
-            <a href="""><i class="fa-brands fa-x-twitter"></i></a>
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-whatsapp"></i></a>
-        </span>
-    </footer>
+        </section>
+
+        <div style="text-align: center;">Dejanos tu mensaje y te contestaremos a la brevedad:</div>
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label"></label>
+            <input type="email" class="form-control form-control-lg" id="exampleFormControlInput1"
+                placeholder="tucorreo@ejemplo.com">
+        </div>
+        <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label"></label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="escribí acá tu mensaje"
+                rows="3"></textarea>
+        </div>
+
+        <section>
+            <a href="#" class="cuerpo__boton">enviar</a>
+        </section>
+
+        <a class="subir_boton" href="#">
+            <i class="fa-solid fa-arrow-up"></i>
+        </a>
+
+        <a class="whatsapp_boton" href="#">
+            <i class="fa-brands fa-whatsapp"></i>
+        </a>
+
+        <footer class="pie">
+            <span class="pie__texto">Espacio Lupsa 2024 todos los derechos reservados</span>
+            <span class="pie__redes">
+                <a href="""><i class=" fa-brands fa-x-twitter"></i></a>
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+            </span>
+        </footer>
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        </script>
+
 </body>
 
 </html>
