--- a/Pages/institucional.html
+++ b/Pages/institucional.html
@@ -1,50 +1,99 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../CSS/estilos.css">
+    <link rel="stylesheet" href="../SCSS/estilos.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
     <title>Institucional</title>
 </head>
+
 <body>
     <header class="encabezado">
-        <div class="encabezado__imagen"><a href="../index.html"><img class="encabezado__logo" src="../Assets/logo.png" alt="" ></a></div>
-        <span class="encabezado__texto_logo">
+        <div class="encabezado__imagen animate__shakeX">
+            <a href="../index.html"><img class="encabezado__logo" src="../Assets/logo.png" alt=""></a>
+        </div>
+        <span class="encabezado__texto_logo animate__backInDown">
             <div>Espacio Lupsa</div>
             <div>Consultorios Multidisciplinarios</div>
         </span>
-        <nav class="encabezado__navegacion">
-            <ul>
-                <li><a href="../index.html">Home |</a></li>
-                <li><a href="./turnos.html">Turnos |</a></li>
-                <li><a href="#">Institucional |</a></li>
-                <li><a href="./staff.html">Staff |</a></li>
-                <li><a href="./info.html">Info |</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-            </ul>
+
+        <!--********** inicio navbar bootstrap **********-->
+
+        <nav class="navbar navbar-expand-md navbar-dark">
+            <button class="navbar-toggler mx-auto" type="button" data-bs-toggle="collapse" data-bs-target="#opciones">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <nav id="opciones" class="encabezado__navegacion collapse navbar-collapse">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./turnos.html">Turnos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Institucional</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./staff.html">Staff</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./info.html">Info</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
         </nav>
+
+        <!--********** fin navbar bootstrap **********-->
+
     </header>
-    <main class="cuerpo">
-        <h1 class="cuerpo1 cuerpo__titulo">Quienes somos</h1>
-        <div class="cuerpo1 cuerpo__texto1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad laborum nostrum explicabo dolores saepe odit odio sit? Eaque harum eius impedit ducimus accusantium sunt aspernatur magnam recusandae iure libero quod quia, eos ad vel ipsa quasi atque molestiae culpa, obcaecati doloremque praesentium! Incidunt earum veniam reiciendis, vero error placeat quidem itaque consequatur dolores quisquam maxime fugiat ea rerum culpa ipsam ducimus voluptate recusandae reprehenderit labore? Beatae voluptatum sint quidem ipsam eos dolorem sed, mollitia delectus vitae quas pariatur facere unde odio! Inventore excepturi nesciunt voluptatum iure omnis error recusandae illo officiis, at nostrum, beatae quo veniam culpa sed earum ullam.
+    <h1 class="titulo animate__fadeInLeft">Quienes somos</h1>
+    <main>
+        <div class="cuerpo">
+            <div class="cuerpo__texto1 animate__fadeInLeft">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
+                laborum nostrum explicabo dolores saepe odit odio sit? Eaque harum eius impedit ducimus accusantium sunt
+                aspernatur magnam recusandae iure libero quod quia, eos ad vel ipsa quasi atque molestiae culpa,
+                obcaecati doloremque praesentium! Incidunt earum veniam reiciendis, vero error placeat quidem itaque
+                consequatur dolores quisquam maxime fugiat ea rerum culpa ipsam ducimus voluptate recusandae
+                reprehenderit labore? Beatae voluptatum sint quidem ipsam eos dolorem sed, mollitia delectus vitae quas
+                pariatur facere unde odio! Inventore excepturi nesciunt voluptatum iure omnis error recusandae illo
+                officiis, at nostrum, beatae quo veniam culpa sed earum ullam.</div>
+            <div class="cuerpo__foto1 animate__fadeInRight" style="background-image: url(../Assets/generales/Foto4.jpg);"> </div>
+            <div class="cuerpo__texto2 animate__fadeInRight">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Incidunt rerum repellat, eaque iusto, soluta velit vitae quae eius iure facilis eligendi dolorem ab? Eos
+                pariatur, nostrum commodi voluptate illum at, delectus earum reprehenderit mollitia deserunt unde vel
+                perferendis quidem dicta reiciendis, quos illo dignissimos. Eveniet maiores delectus vero voluptatibus
+                doloribus est praesentium id omnis doloremque ad. Natus veritatis porro expedita debitis commodi ea illo
+                eum blanditiis, numquam quam similique eaque provident saepe quod suscipit totam ipsam voluptatibus quis
+                itaque ducimus sunt aut dolorem minus. Ducimus, reprehenderit nesciunt molestiae laboriosam nostrum,
+                voluptate esse, minus iste voluptates nemo sapiente corporis libero quisquam.</div>
+            <div class="cuerpo__foto2 animate__fadeInLeft" style="background-image: url(../Assets/generales/Foto5.jpg);"> </div>
         </div>
-        <div class="cuerpo1 cuerpo__foto1" style="background-image: url(../Assets/Foto4.jpg);"> </div>
-        <div class="cuerpo1 cuerpo__texto2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt rerum repellat, eaque iusto, soluta velit vitae quae eius iure facilis eligendi dolorem ab? Eos pariatur, nostrum commodi voluptate illum at, delectus earum reprehenderit mollitia deserunt unde vel perferendis quidem dicta reiciendis, quos illo dignissimos. Eveniet maiores delectus vero voluptatibus doloribus est praesentium id omnis doloremque ad. Natus veritatis porro expedita debitis commodi ea illo eum blanditiis, numquam quam similique eaque provident saepe quod suscipit totam ipsam voluptatibus quis itaque ducimus sunt aut dolorem minus. Ducimus, reprehenderit nesciunt molestiae laboriosam nostrum, voluptate esse, minus iste voluptates nemo sapiente corporis libero quisquam.</div>
-        <div class="cuerpo1 cuerpo__foto2" style="background-image: url(../Assets/Foto5.jpg);"> </div>
     </main>
+    
+    <a class="subir_boton" href="#">
+        <i class="fa-solid fa-arrow-up"></i>
+    </a>
+
+    <a class="whatsapp_boton" href="#">
+        <i class="fa-brands fa-whatsapp"></i>
+    </a>
+
     <footer class="pie">
         <span class="pie__texto">Espacio Lupsa 2024 todos los derechos reservados</span>
         <span class="pie__redes">
             <a href=""><i class="fa-brands fa-x-twitter"></i></a>
             <a href=""><i class="fa-brands fa-facebook"></i></a>
             <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-whatsapp"></i></a>
         </span>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+
 </body>
 
 </html>
