--- a/Pages/staff.html
+++ b/Pages/staff.html
@@ -8,85 +8,208 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../CSS/estilos.css">
+    <link rel="stylesheet" href="../SCSS/estilos.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <title>Staff</title>
 </head>
 
 <body>
     <header class="encabezado">
-        <div class="encabezado__imagen"><a href="../index.html"><img class="encabezado__logo" src="../Assets/logo.png"
-                    alt=""></a></div>
-        <span class="encabezado__texto_logo">
+        <div class="encabezado__imagen animate__shakeX">
+            <a href="../index.html"><img class="encabezado__logo" src="../Assets/logo.png" alt=""></a>
+        </div>
+        <span class="encabezado__texto_logo animate__backInDown">
             <div>Espacio Lupsa</div>
             <div>Consultorios Multidisciplinarios</div>
         </span>
-        <nav class="encabezado__navegacion">
-            <ul>
-                <li><a href="../index.html">Home |</a></li>
-                <li><a href="./turnos.html">Turnos |</a></li>
-                <li><a href="./institucional.html">Institucional |</a></li>
-                <li><a href="#">Staff |</a></li>
-                <li><a href="./info.html">Info |</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-            </ul>
+
+        <!--********** inicio navbar bootstrap **********-->
+
+        <nav class="navbar navbar-expand-md navbar-dark">
+            <button class="navbar-toggler mx-auto" type="button" data-bs-toggle="collapse" data-bs-target="#opciones">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <nav id="opciones" class="encabezado__navegacion collapse navbar-collapse">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./turnos.html">Turnos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./institucional.html">Institucional</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Staff</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./info.html">Info</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
         </nav>
+
+        <!--********** fin navbar bootstrap **********-->
+
     </header>
-    <main class="cuerpo">
-        <h1 class="cuerpo__titulo">Nuestro equipo</h1>
-        <p class="cuerpo__texto1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores perspiciatis culpa,
-            alias porro esse perferendis. Alias beatae blanditiis minima sed eaque similique, eos fugit illum quis
-            omnis, in asperiores consequuntur.</p>
-        <div class="cuerpo__foto1" style="background-image: url(../Assets/Foto6.jpg);"> </div>
+    <h1 class="titulo animate__fadeInLeft">Nuestro equipo</h1>
+    <main>
+        <div class="cuerpo">
+            <p class="cuerpo__texto1 animate__fadeInLeft">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Dolores perspiciatis culpa,
+                alias porro esse perferendis. Alias beatae blanditiis minima sed eaque similique, eos fugit illum quis
+                omnis, in asperiores consequuntur.</p>
+            <div class="cuerpo__foto1 animate__fadeInRight" style="background-image: url(../Assets/generales/Foto6.jpg);"> </div>
+        </div>
     </main>
-    <h1 class="cuerpo__titulo" style="background-color: rgba(0, 0, 0, 0.233);
-                padding: 20px;">
-                Profesionales a su servicio
-    </h1>
+    <h1 class="titulo animate__fadeInLeft">Profesionales a su servicio</h1>
+
+    <!--********** inicio cards bootstrap **********-->
 
     <div class="container-fluid">
-    <div class="row">
-        <div class="card col-md-6 col-lg-3">
-            <img class="card-img-top mx-auto" src="../Assets/profesional1.jpg" alt="Card image">
-            <div class="card-body">
-                <h4 class="card-title">José Ortigoza</h4>
-                <p class="card-text">Psicólogo</p>
-                <p class="card-text">Mat. 12345</p>
-                <a style="font-size: 20px;" href="#" class="card__boton fa-brands fa-linkedin"> <span style="font-size: 15px;">ver perfil</span></a>
+        <div class="row">
+            <div data-aos="flip-left" class="card col-md-6 col-lg-3">
+                <img class="card-img-top mx-auto" src="../Assets/profesionales/jose ortigoza.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">José Ortigoza</h4>
+                    <p class="card-text">Psicólogo</p>
+                    <p class="card-text">Mat. 12345</p>
+                    <a style="font-size: 20px;" href="#" class="cuerpo__boton fa-brands fa-linkedin"> <span
+                            style="font-size: 15px;">ver perfil</span></a>
+                </div>
             </div>
-        </div>
 
-        <div class="card col-md-6 col-lg-3">
-            <img class="card-img-top mx-auto" src="../Assets/profesional3.jpg" alt="Card image">
-            <div class="card-body">
-                <h4 class="card-title">Juan Pérez</h4>
-                <p class="card-text">Psicopedagogo</p>
-                <p class="card-text">Mat. 12346</p>
-                <a style="font-size: 20px;" href="#" class="card__boton fa-brands fa-linkedin"> <span style="font-size: 15px;">ver perfil</span></a>
+            <div data-aos="flip-left" class="card col-md-6 col-lg-3">
+                <img class="card-img-top mx-auto" src="../Assets/profesionales/juan perez.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">Juan Pérez</h4>
+                    <p class="card-text">Psicopedagogo</p>
+                    <p class="card-text">Mat. 12346</p>
+                    <a style="font-size: 20px;" href="#" class="cuerpo__boton fa-brands fa-linkedin"> <span
+                            style="font-size: 15px;">ver perfil</span></a>
+                </div>
             </div>
-        </div>
 
-        <div class="card col-md-6 col-lg-3">
-            <img class="card-img-top mx-auto" src="../Assets/profesional2.jpg" alt="Card image">
-            <div class="card-body">
-                <h4 class="card-title">Ana Fernandez</h4>
-                <p class="card-text">Psiquiatra</p>
-                <p class="card-text">Mat. 12347</p>
-                <a style="font-size: 20px;" href="#" class="card__boton fa-brands fa-linkedin"> <span style="font-size: 15px;">ver perfil</span></a>
+            <div data-aos="flip-left" class="card col-md-6 col-lg-3">
+                <img class="card-img-top mx-auto" src="../Assets/profesionales/ana fernandez.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">Ana Fernandez</h4>
+                    <p class="card-text">Psiquiatra</p>
+                    <p class="card-text">Mat. 12347</p>
+                    <a style="font-size: 20px;" href="#" class="cuerpo__boton fa-brands fa-linkedin"> <span
+                            style="font-size: 15px;">ver perfil</span></a>
+                </div>
             </div>
-        </div>
 
-        <div class="card col-md-6 col-lg-3">
-            <img class="card-img-top mx-auto" src="../Assets/profesional4.jpg" alt="Card image">
-            <div class="card-body">
-                <h4 class="card-title">Pablo García</h4>
-                <p class="card-text">Terapista Ocupacional</p>
-                <p class="card-text">Mat. 12348</p>
-                <a style="font-size: 20px;" href="#" class="card__boton fa-brands fa-linkedin"> <span style="font-size: 15px;">ver perfil</span></a>
+            <div data-aos="flip-left" class="card col-md-6 col-lg-3">
+                <img class="card-img-top mx-auto" src="../Assets/profesionales/pablo garcia.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">Pablo García</h4>
+                    <p class="card-text">Terapista Ocupacional</p>
+                    <p class="card-text">Mat. 12348</p>
+                    <a style="font-size: 20px;" href="#" class="cuerpo__boton fa-brands fa-linkedin"> <span
+                            style="font-size: 15px;">ver perfil</span></a>
+                </div>
+            </div>
+
+            <div data-aos="flip-left" class="card col-md-6 col-lg-3">
+                <img class="card-img-top mx-auto" src="../Assets/profesionales/nicolas ortiz.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">Nicolás Ortiz</h4>
+                    <p class="card-text">Psicólogo</p>
+                    <p class="card-text">Mat. 12349</p>
+                    <a style="font-size: 20px;" href="#" class="cuerpo__boton fa-brands fa-linkedin"> <span
+                            style="font-size: 15px;">ver perfil</span></a>
+                </div>
+            </div>
+
+            <div data-aos="flip-left" class="card col-md-6 col-lg-3">
+                <img class="card-img-top mx-auto" src="../Assets/profesionales/valeria diaz.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">Valeria Díaz</h4>
+                    <p class="card-text">Neurólogo</p>
+                    <p class="card-text">Mat. 12351</p>
+                    <a style="font-size: 20px;" href="#" class="cuerpo__boton fa-brands fa-linkedin"> <span
+                            style="font-size: 15px;">ver perfil</span></a>
+                </div>
+            </div>
+
+            <div data-aos="flip-left" class="card col-md-6 col-lg-3">
+                <img class="card-img-top mx-auto" src="../Assets/profesionales/marcelo prado.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">Marcelo Prado</h4>
+                    <p class="card-text">Psiquiatra</p>
+                    <p class="card-text">Mat. 12352</p>
+                    <a style="font-size: 20px;" href="#" class="cuerpo__boton fa-brands fa-linkedin"> <span
+                            style="font-size: 15px;">ver perfil</span></a>
+                </div>
+            </div>
+
+            <div data-aos="flip-left" class="card col-md-6 col-lg-3">
+                <img class="card-img-top mx-auto" src="../Assets/profesionales/oscar girotti.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">Oscar Girotti</h4>
+                    <p class="card-text">Musicoterapeuta</p>
+                    <p class="card-text">Mat. 12353</p>
+                    <a style="font-size: 20px;" href="#" class="cuerpo__boton fa-brands fa-linkedin"> <span
+                            style="font-size: 15px;">ver perfil</span></a>
+                </div>
+            </div>
+
+            <div data-aos="flip-left" class="card col-md-6 col-lg-3">
+                <img class="card-img-top mx-auto" src="../Assets/profesionales/juana orozco.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">Juana Orozco</h4>
+                    <p class="card-text">Psicólogo</p>
+                    <p class="card-text">Mat. 12354</p>
+                    <a style="font-size: 20px;" href="#" class="cuerpo__boton fa-brands fa-linkedin"> <span
+                            style="font-size: 15px;">ver perfil</span></a>
+                </div>
+            </div>
+
+            <div data-aos="flip-left" class="card col-md-6 col-lg-3">
+                <img class="card-img-top mx-auto" src="../Assets/profesionales/ines fernandez.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">Inés Fernandez</h4>
+                    <p class="card-text">Terapista Ocupacional</p>
+                    <p class="card-text">Mat. 12355</p>
+                    <a style="font-size: 20px;" href="#" class="cuerpo__boton fa-brands fa-linkedin"> <span
+                            style="font-size: 15px;">ver perfil</span></a>
+                </div>
+            </div>
+
+            <div data-aos="flip-left" class="card col-md-6 col-lg-3">
+                <img class="card-img-top mx-auto" src="../Assets/profesionales/mariela perez.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">Mariela Pérez</h4>
+                    <p class="card-text">A. Terapéutico</p>
+                    <p class="card-text">Mat. 12356</p>
+                    <a style="font-size: 20px;" href="#" class="cuerpo__boton fa-brands fa-linkedin"> <span
+                            style="font-size: 15px;">ver perfil</span></a>
+                </div>
+            </div>
+
+            <div data-aos="flip-left" class="card col-md-6 col-lg-3">
+                <img class="card-img-top mx-auto" src="../Assets/profesionales/flavio iñiguez.jpg" alt="Card image">
+                <div class="card-body">
+                    <h4 class="card-title">Flavio Iñiguez</h4>
+                    <p class="card-text">A. Terapéutico</p>
+                    <p class="card-text">Mat. 12357</p>
+                    <a style="font-size: 20px;" href="#" class="cuerpo__boton fa-brands fa-linkedin"> <span
+                            style="font-size: 15px;">ver perfil</span></a>
+                </div>
             </div>
         </div>
     </div>
-</div>
+
+    <!--********** fin cards bootstrap **********-->
+
+    <a class="subir_boton" href="#">
+        <i class="fa-solid fa-arrow-up"></i>
+    </a>
+
+    <a class="whatsapp_boton" href="#">
+        <i class="fa-brands fa-whatsapp"></i>
+    </a>
 
     <footer class="pie">
         <span class="pie__texto">Espacio Lupsa 2024 todos los derechos reservados</span>
@@ -94,13 +217,18 @@
             <a href="""><i class=" fa-brands fa-x-twitter"></i></a>
             <a href=""><i class="fa-brands fa-facebook"></i></a>
             <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-whatsapp"></i></a>
         </span>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-</script>
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script> AOS.init(); </script>
+
+
 </body>
 
 </html>
