--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -57,9 +57,7 @@
     <main>
         <h1 class="titulo animate__fadeInLeft">Contacto</h1>
         <div class="cuerpo">
-            <p class="cuerpo__texto1 animate__fadeInLeft">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Dolores perspiciatis culpa, alias porro esse perferendis. Alias beatae blanditiis minima sed eaque
-                similique, eos fugit illum quis omnis, in asperiores consequuntur.</p>
+            <p class="cuerpo__texto1 animate__fadeInLeft">Además de la terapia individualizada, también ofrecemos talleres, charlas y actividades de desarrollo personal y crecimiento emocional para aquellos que deseen explorar diferentes enfoques para mejorar su bienestar mental y emocional. ¡Contactanos para más información!</p>
             <div class="cuerpo__foto1 animate__fadeInRight"><iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13332.271943948563!2d-60.22584583597008!3d-33.34317360936359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b75d7f65584f59%3A0x67647c43f618cb7c!2sSan%20Jos%C3%A9%20348%2C%20San%20Nicol%C3%A1s%20de%20Los%20Arroyos%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1711204630498!5m2!1ses-419!2sar"
                     width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"
