--- a/Pages/info.html
+++ b/Pages/info.html
@@ -56,14 +56,10 @@
     <h1 class="titulo animate__fadeInLeft">Información</h1>
     <main>
         <div class="cuerpo">
-            <div class="cuerpo__texto1 animate__fadeInLeft">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Dolores perspiciatis culpa, alias porro esse perferendis. Alias beatae blanditiis minima sed eaque
-                similique, eos fugit illum quis omnis, in asperiores consequuntur.</div>
+            <p class="cuerpo__texto1 animate__fadeInLeft">En Espacio Lupsa, nos esforzamos por crear un ambiente de confianza y confidencialidad donde te sientas seguro para compartir tus preocupaciones más profundas sin temor al juicio. Creemos en la importancia de establecer una relación terapéutica sólida y de confianza, basada en el respeto mutuo, la empatía y la autenticidad. En nuestros consultorios, valoramos la colaboración y el respeto mutuo. Creemos en trabajar en conjunto contigo para identificar tus fortalezas y desafíos, y desarrollar estrategias efectivas para promover un mayor bienestar emocional y una vida más plena y satisfactoria.</p>
             <div class="cuerpo__foto1 animate__fadeInRight"
                 style="background-image: url(../Assets/generales/Foto1.jpg);"></div>
-            <div class="cuerpo__texto2 animate__fadeInRight">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Sequi dolore fugiat nam ratione ea, totam assumenda ut cum quisquam, architecto deleniti! Maiores est
-                quibusdam enim. Accusamus ipsa soluta rem quas.</div>
+            <p class="cuerpo__texto2 animate__fadeInRight">Independientemente de cuáles sean tus inquietudes, estamos aquí para brindarte un espacio seguro y de apoyo donde puedas explorar tus pensamientos y emociones de manera abierta y sin prejuicios. ¡Esperamos tener la oportunidad de trabajar juntos y ayudarte a alcanzar tus objetivos de bienestar psicológico!</p>
             <div class="cuerpo__foto2 animate__fadeInLeft"
                 style="background-image: url(../Assets/generales/Foto3.jpg);"></div>
         </div>
