--- a/Pages/institucional.html
+++ b/Pages/institucional.html
@@ -56,24 +56,10 @@
     <h1 class="titulo animate__fadeInLeft">Quienes somos</h1>
     <main>
         <div class="cuerpo">
-            <div class="cuerpo__texto1 animate__fadeInLeft">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
-                laborum nostrum explicabo dolores saepe odit odio sit? Eaque harum eius impedit ducimus accusantium sunt
-                aspernatur magnam recusandae iure libero quod quia, eos ad vel ipsa quasi atque molestiae culpa,
-                obcaecati doloremque praesentium! Incidunt earum veniam reiciendis, vero error placeat quidem itaque
-                consequatur dolores quisquam maxime fugiat ea rerum culpa ipsam ducimus voluptate recusandae
-                reprehenderit labore? Beatae voluptatum sint quidem ipsam eos dolorem sed, mollitia delectus vitae quas
-                pariatur facere unde odio! Inventore excepturi nesciunt voluptatum iure omnis error recusandae illo
-                officiis, at nostrum, beatae quo veniam culpa sed earum ullam.</div>
+            <p class="cuerpo__texto1 animate__fadeInLeft">Somos un equipo de profesionales dedicados y apasionados por la salud mental y el bienestar emocional. Nuestra misión es proporcionar un espacio seguro, compasivo y de apoyo donde las personas puedan explorar sus pensamientos, emociones y experiencias de vida de manera abierta y sin juicio. Nuestro equipo está formado por psicólogos clínicos, terapeutas y consejeros con una amplia experiencia y formación en diversas áreas de la psicología y la salud mental. Todos nuestros profesionales están debidamente licenciados y comprometidos con seguir aprendiendo y creciendo profesionalmente para poder ofrecer los mejores servicios a nuestros clientes.</p>
             <div class="cuerpo__foto1 animate__fadeInRight"
                 style="background-image: url(../Assets/generales/Foto4.jpg);"> </div>
-            <div class="cuerpo__texto2 animate__fadeInRight">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Incidunt rerum repellat, eaque iusto, soluta velit vitae quae eius iure facilis eligendi dolorem ab? Eos
-                pariatur, nostrum commodi voluptate illum at, delectus earum reprehenderit mollitia deserunt unde vel
-                perferendis quidem dicta reiciendis, quos illo dignissimos. Eveniet maiores delectus vero voluptatibus
-                doloribus est praesentium id omnis doloremque ad. Natus veritatis porro expedita debitis commodi ea illo
-                eum blanditiis, numquam quam similique eaque provident saepe quod suscipit totam ipsam voluptatibus quis
-                itaque ducimus sunt aut dolorem minus. Ducimus, reprehenderit nesciunt molestiae laboriosam nostrum,
-                voluptate esse, minus iste voluptates nemo sapiente corporis libero quisquam.</div>
+            <p class="cuerpo__texto2 animate__fadeInRight">Nos enorgullece ofrecer una amplia gama de servicios terapéuticos adaptados a las necesidades individuales de cada persona que nos consulta. Ya sea que estés buscando terapia individual, terapia de pareja, terapia familiar o terapia de grupo, estamos aquí para proporcionarte el apoyo y las herramientas que necesitas para enfrentar tus desafíos y alcanzar tus metas. En nuestros consultorios, valoramos la importancia de una atención centrada en la persona, donde cada individuo se sienta escuchado, respetado y comprendido. Creemos en la importancia de establecer una relación terapéutica sólida y de confianza con nuestros clientes, basada en el respeto mutuo, la empatía y la autenticidad.</p>
             <div class="cuerpo__foto2 animate__fadeInLeft"
                 style="background-image: url(../Assets/generales/Foto5.jpg);"> </div>
         </div>
