--- a/Pages/staff.html
+++ b/Pages/staff.html
@@ -58,10 +58,8 @@
     <h1 class="titulo animate__fadeInLeft">Nuestro equipo</h1>
     <main>
         <div class="cuerpo">
-            <p class="cuerpo__texto1 animate__fadeInLeft">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Dolores perspiciatis culpa,
-                alias porro esse perferendis. Alias beatae blanditiis minima sed eaque similique, eos fugit illum quis
-                omnis, in asperiores consequuntur.</p>
+            <p class="cuerpo__texto1 animate__fadeInLeft">Nuestro equipo de profesionales altamente capacitados ofrece terapia personalizada y confidencial para abordar una amplia gama de preocupaciones, desde el manejo del estrés y la ansiedad hasta la superación de traumas pasados ​​y la mejora de las relaciones interpersonales.
+            </p>
             <div class="cuerpo__foto1 animate__fadeInRight"
                 style="background-image: url(../Assets/generales/Foto6.jpg);"> </div>
         </div>
