--- a/Pages/turnos.html
+++ b/Pages/turnos.html
@@ -56,9 +56,7 @@
     <h1 class="titulo animate__fadeInLeft">Solicite su turno</h1>
     <main>
         <div class="cuerpo">
-            <p class="cuerpo__texto1 animate__fadeInLeft">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Dolores perspiciatis culpa, alias porro esse perferendis. Alias beatae blanditiis minima sed eaque
-                similique, eos fugit illum quis omnis, in asperiores consequuntur.</p>
+            <p class="cuerpo__texto1 animate__fadeInLeft">No estás solo en tu viaje hacia el crecimiento personal y la sanación. En Espacio Lupsa, estamos comprometidos a acompañarte en cada paso del camino hacia una vida más saludable y significativa.</p>
             <div class="cuerpo__foto1 animate__fadeInRight"
                 style="background-image: url(../Assets/generales/Foto2.jpg);"> </div>
         </div>
