--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
     <main>
         <h1 class="titulo animate__fadeInLeft">Nuestros Consultorios</h1>
+        <p style="margin-right: 70px; margin-left: 70px; margin-bottom: 70px;" class="cuerpo__texto1">Bienvenidos Espacio Lupsa. En nuestro espacio, nos dedicamos a proporcionar un apoyo integral para tu bienestar mental y emocional. Sabemos que cada individuo enfrenta desafíos únicos en su vida, y estamos aquí para ayudarte a navegar a través de ellos.</p>
 
         <!--********** inicio carousel bootstrap**********-->
 
