--- a/Pages/institucional.html
+++ b/Pages/institucional.html
@@ -18,6 +18,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
+    <link rel="shortcut icon" href="./Assets/logo.png" />
+
     <title>Institucional</title>
 </head>
 
