--- a/Pages/staff.html
+++ b/Pages/staff.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    
+    <link rel="shortcut icon" href="./Assets/logo.png" />
 
     <title>Staff</title>
 </head>
