--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-    <link rel="shortcut icon" href="./Assets/logo.png" />
+    <link rel="shortcut icon" href="../Assets/logo.png" />
 
     <title>Contacto</title>
 </head>
